basically finished with weather api call -> scratch3.js, also browser geoLocation function getGeoBrwsr.js
api fetch async geo location broswer api-proxy weather api call
"

--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -8,6 +8,36 @@
   </head>
   <body>
     <h1>Asynchronous JavaScript</h1>
+    <h2 id="weather">Weather</h2>
+    <div id="weather-box-today">
+      <h3 class="todayDate">DATE: </h3>
+      <h3 class="weatherLocation">Location: </h3>
+      <h4 class="weatherSummation">Today one can expect: </h4>
+      <table>
+        <caption>Todays Temps</caption>
+        <th>
+          <tr>Now</tr>
+          <tr>High</tr>
+          <tr>Low</tr>
+        </th>
+        <td>
+          <tr class="now-temp"></tr>
+          <tr class="high-temp"></tr>
+          <tr class="low-temp"></tr>
+        </td>
+      </table>
+      <table>
+        <caption>Sun Time</caption>
+        <th>
+          <tr>Sunrise</tr>
+          <tr>Sunset</tr>
+        </th>
+        <td>
+          <tr class='weather-sunrise'></tr>
+          <tr class='weather-sunset'></tr>
+        </td>
+      </table>
+    </div>
     <script src="scratch3.js"></script>
 
   </body>
